// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge 1`] = `
<div
  className="css-1dspmwm-StyledBadge e1sxbycx0"
>
  BADGETEXT
</div>
`;

exports[`with variant 1`] = `
<div
  className="orange css-1dspmwm-StyledBadge e1sxbycx0"
>
  3
</div>
`;
